<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:inputType="numberDecimal"
        android:hint="@string/distancia"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_de_quilometros"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preco"
        android:layout_marginTop="16sp"
        android:inputType="numberDecimal"



        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preco_por_litro"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/edit_autonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autonomia"
        android:layout_marginTop="16sp"
        android:inputType="numberDecimal"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kms_por_litro"
        android:gravity="center"
        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seu_gasto_total_sera_de"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_total"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="36sp"
        android:textColor="@color/black"
        />
    
    <Button
        android:onClick="teste"
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="32sp"
        android:text="@string/calcular"
        android:textAllCaps="true"
        android:backgroundTint="@color/teal_200"
        android:textSize="20sp"
        />

</LinearLayout>